Fixed overflow mobile issue

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   max-width: 800px;
   margin: 0 auto;
   /* background-color: #fff; */
-  padding: 2em;
+  padding: 1em;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
